<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JobSnap C</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_login">Sign in</string>
    <string name="tv_menu_main">Select Job</string>
    <string name="tv_details_closejob">Close Job</string>
    <string name="tv_homehealth_main"> Home Health</string>
    <string name="hint_username">Enter tech ID</string>
    <string name="hint_pass">Enter Password</string>
    <string name="chk_savePass">Remember Me</string>

    <!-- progress -->
    <string name="progress_login_msg">Loging in ......</string>
    <string name="progress_wait_msg">Please wait ......</string>
    <string name="progress_wait_creating_entry">Creating entry ......</string>
     <string name="progress_wait_load_products">Loading products ......</string>

    <!-- Toast -->
    <string name="Toast_empty_use">UserId or Password Should not be Empty </string>
    <string name="Toast_no_internet">Internet is not available </string>
    <string name="Toast_no_more_pic">You have taken required snaps </string>
    <string name="Toast_take_snaps_warning">You shoud have to take three snaps</string>
    <string name="Toast_inDevelopment">In development phase</string>

    <!-- Buttons -->
    <string name="btn_login">Login</string>
    <string name="btn_menu_select_job">Select Job </string>
    <string name="btn_menu_return_eq">Return Equipment </string>
    <string name="btn_menu_home_health">Home Health </string>
    <string name="btn_account_take_pic">Capture Snap</string>
    <string name="btn_jobdetail_close_job">Close Job</string>
    <string name="btn_account_add_eq">Add Equipment</string>

</resources>