<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:gravity="center"
        android:text="@string/tv_menu_main"
        android:textSize="40dip" />

    <Button
        android:id="@+id/btn_menu_select_job"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu_select_job" />

    <Button
        android:id="@+id/btn_menu_return_eq"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu_return_eq" />

    <Button
        android:id="@+id/btn_menu_home_health"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu_home_health" />

</LinearLayout>