<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"
        android:gravity="center"
        android:text="@string/tv_details_closejob"
        android:textSize="40dip" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:orientation="horizontal"
        android:weightSum="3" >

        <ImageView
            android:id="@+id/iv_acount_one"
            android:layout_width="100dip"
            android:layout_height="150dip"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/iv_acount_two"
            android:layout_width="100dip"
            android:layout_height="150dip"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/iv_acount_three"
            android:layout_width="100dip"
            android:layout_height="150dip"
            android:layout_weight="1"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_account_take_snap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_account_take_pic" />

        <Button
            android:id="@+id/btn_account_add_eq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_account_add_eq" />
    </LinearLayout>

</LinearLayout>